# basildisk

./: Cargo.toml
src/: disk_info.rs  lsblk.rs  main.rs  smartctl.rs
templates/: base.html.tera  index.html.tera  smart.html.tera
templates/static/: style.css
