[package]
name = "basildisk"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
